# potext

./: .gitignore  ChangeLog  INSTALL  LICENSE.md  NEWS  README.md  meson.build  meson.options  potext.pc.in  work.sh
doc/dia/: dictionary.dia  dictionarymgr.dia  extractor.dia  gettext-module.dia  language.dia  logstream.dia  moparser.dia  nlsbindings.dia  pomoparserbase.dia  poparser.dia  potext.dia
doc/latex/: make_pdf.sh
doc/latex/tex/: architecture.tex  gettext.tex  potext-developer-guide.tex  references.tex  tests.tex  usage.tex
extras/: README  meson_options.txt
extras/code/: dcigettext.cpp  gettext.h  iconvfull.c  mini-potext-test.tar.xz
extras/notes/: icons.text  poparser.text
extras/vim/: gvimrc
extras/wraps/: potext-git-local.wrap  potext-git.wrap  potext-local.wrap  potext-tar.wrap
mo/: README  de.mo  es.mo  fr.mo  pl.mo
po/: README  de.po  es.po  fr.po  pl.po
tinydocs/: LICENSE.md  README.md
